--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 </a>
  
       <button id="no-btn">No</button>
-      <a href="static/pdfs/resume.pdf" download class="resume-btn">Download Resume</a>
+      <button><a href="static/pdfs/resume.pdf" download class="resume-btn">Download Resume</a></button>
   </div>
    
     <!-- Header & Navbar -->
@@ -101,7 +101,7 @@
       </div>
     </section>
 
-  
+
     <section class="container py-5" id="portfolio">
       <div class="row mt-4 py-3">
         <div class="col-12 d-flex flex-column text-center justify-content-center">
