--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 </a>
  
       <button id="no-btn">No</button>
-      <button><a href="static/pdfs/resume.pdf" download class="resume-btn">Download Resume</a></button>
+      <button id="no-btn"><a href="static/pdfs/resume.pdf" download class="resume-btn">Download Resume</a></button>
   </div>
    
     <!-- Header & Navbar -->
