--- a/static/style.css
+++ b/static/style.css
@@ -64,7 +64,23 @@ body {
   transform: scale(1.1);
   box-shadow: 4px 4px 10px rgba(100, 100, 100, 0.5);
 }
+.resume-btn {
+  background-color: white;
+  margin-left: 100px;
+  color: #4A90E2;
+  padding: 10px 15px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
 
+.resume-btn:hover {
+  background-color: #ffd700;
+  color: #333;
+  transform: scale(1.05);
+}
 
 /* --- Mobile Responsive Fix --- */
 @media (max-width: 600px) {
